test/Fail/Issue2442-conflicting.agda
{-# OPTIONS --safe --no-termination-check #-}

module Issue2442-conflicting where
