test/Fail/Issue2442-conflicting.err
Issue2442-conflicting.agda:1,1-46: error: [OptionError]
Option --safe cannot be combined with option --no-termination-check
